static/css/custom.css
.accordion-toggle {
	color:#00A0D8;
	font-weight: bold;
}

h2, h3 {
	color: #0087DC;
}

/* flex-video from BOOTPLY.com
}-------------------------------------------------- */

.flex-video {
  position: relative;
  padding-top: 25px;
  padding-bottom: 67.5%;
  height: 0;
  margin-bottom: 16px;
  overflow: hidden;
}
 
.flex-video.widescreen { padding-bottom: 57.25%; }
.flex-video.vimeo { padding-top: 0; }
 
.flex-video iframe,
.flex-video object,
.flex-video embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
  .flex-video { 
    padding-top: 0; 
  }
}



/* BOOTSTRAP 3.x GLOBAL STYLES
}-------------------------------------------------- */
body {
  padding-bottom: 80px;
  color: #5a5a5a;
}



/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
}

.navbar-inverse .navbar-link {
  color: #0087DC;
}

.navbar-inverse .navbar-link:hover {
  color: #FF760A;
}

.navbar-inverse .navbar-nav > li > a {
  color: #fff;
}

.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus {
  color: #FF760A;
  background-color: transparent;
}

.navbar-inverse .navbar-brand {
  color: #FF760A;
}

.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus {
  color: #ffffff;
  background-color: transparent;
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.page-header {
  position: relative;
  padding-top: 0px;
  margin-top: -20px;
  margin-bottom: 40px;
  height: 300px;
  background-color:#0087DC;
  background-image: url("http://lorempixel.com/600/600/cats");
  background-repeat:no-repeat;
  background-position: top center;
  background-size: 100%;
}

.page-header h1 {
  font-size: 4em;
  z-index: 0;
}

.page-header h1 small {
    margin-bottom: 20px;
    font-size: 0.8em;
    line-height: 1.4;
    color: #fff;
}

.page-header .item {
  position: absolute;
  right: 15%;
  bottom: 20px;
  left: 15%;
  z-index: 10;
  padding-top: 20px;
  padding-bottom: 20px;
  color: #ffffff;
  text-align: center;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
}





/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {

  /* Navbar positioning foo */
  .navbar-wrapper {
    margin-top: 20px;
    margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
  }
  /* The navbar becomes detached from the top, so we round the corners */
  .navbar-wrapper .navbar {
    border-radius: 4px;
  }


}

/* some mobile fixes
-------------------------------------------------- */

@media (max-width: 480px) {
  body {
    padding-bottom: 120px;
  }

  .page-header h1 {
    font-size: 3em;
    z-index: 0;
  }

  .page-header h1 small {
      margin-bottom: 10px;
      font-size: 0.6em;

}

}

